# RainCppAI

./: .clang-format  .gitignore  AGENT.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOP_STANDARD.md  README.md  README_EN.md  TODO.md  mcp_config.json  models.json
AIApps/ChatServer/include/: ChatServer.h
AIApps/ChatServer/include/AIUtil/: AIConfig.h  AIHelper.h  AIStrategy.h  AIToolRegistry.h  MQManager.h  McpServer.h
AIApps/ChatServer/include/handlers/: AIMenuHandler.h  AIUploadHandler.h  AIUploadSendHandler.h  ChatCreateAndSendHandler.h  ChatEntryHandler.h  ChatHandler.h  ChatHistoryHandler.h  ChatLoginHandler.h  ChatLogoutHandler.h  ChatRegisterHandler.h  ChatSendHandler.h  ChatSessionsHandler.h  ChatSpeechHandler.h  ChatSseHandler.h  ChatUpdateTitleHandler.h  McpHandler.h
AIApps/ChatServer/resource/: AI.html  NotFound.html  entry.html  menu.html  upload.html
AIApps/ChatServer/src/: ChatServer.cpp
AIApps/ChatServer/src/AIUtil/: AIHelper.cpp  AISpeechProcessor.cpp  AIStrategy.cpp  AIToolRegistry.cpp  MQManager.cpp  McpServer.cpp
AIApps/ChatServer/src/handlers/: AIMenuHandler.cpp  AIUploadSendHandler.cpp  ChatCreateAndSendHandler.cpp  ChatHistoryHandler.cpp  ChatLoginHandler.cpp  ChatLogoutHandler.cpp  ChatSendHandler.cpp  ChatSessionsHandler.cpp  ChatSseHandler.cpp  ChatUpdateTitleHandler.cpp  McpHandler.cpp
AIEngine/: TECHDOC.md
AIEngine/include/audio/: AISpeechProcessor.h
AIEngine/include/common/: AIConfig.h  AISessionIdGenerator.h  MQManager.h  Message.h
AIEngine/include/llm/: AIFactory.h  AIHelper.h  AIStrategy.h
AIEngine/include/mcp/: AIToolRegistry.h  McpClientManager.h  McpServer.h
AIEngine/include/vision/: ImageRecognizer.h
AIEngine/src/audio/: AISpeechProcessor.cpp
AIEngine/src/common/: AIConfig.cpp  AISessionIdGenerator.cpp  MQManager.cpp  base64.cpp
AIEngine/src/llm/: AIFactory.cpp  AIHelper.cpp  AIStrategy.cpp
AIEngine/src/mcp/: AIToolRegistry.cpp  McpClientManager.cpp  McpServer.cpp
AIEngine/src/vision/: ImageRecognizer.cpp
AIServerCore/: TECHDOC.md
AIServerCore/include/controller/: AIMenuHandler.h  AIUploadHandler.h  AIUploadSendHandler.h  ApiKeyHandler.h  ChatCreateAndSendHandler.h  ChatDeleteSessionHandler.h  ChatEntryHandler.h  ChatHandler.h  ChatHistoryHandler.h  ChatLoginHandler.h  ChatLogoutHandler.h  ChatRegisterHandler.h  ChatSendHandler.h  ChatSessionsHandler.h  ChatSpeechHandler.h  ChatSseHandler.h  ChatUpdateTitleHandler.h  McpHandler.h  ModelListHandler.h  StaticFileHandler.h
AIServerCore/include/server/: ChatServer.h
AIServerCore/src/: main.cpp
AIServerCore/src/controller/: AIMenuHandler.cpp  AIUploadHandler.cpp  AIUploadSendHandler.cpp  ApiKeyHandler.cpp  ChatCreateAndSendHandler.cpp  ChatDeleteSessionHandler.cpp  ChatEntryHandler.cpp  ChatHandler.cpp  ChatHistoryHandler.cpp  ChatLoginHandler.cpp  ChatLogoutHandler.cpp  ChatRegisterHandler.cpp  ChatSendHandler.cpp  ChatSessionsHandler.cpp  ChatSpeechHandler.cpp  ChatSseHandler.cpp  ChatUpdateTitleHandler.cpp  McpHandler.cpp  ModelListHandler.cpp  StaticFileHandler.cpp
AIServerCore/src/server/: ChatServer.cpp
HttpServer/: TECHDOC.md
HttpServer/include/http/: HttpContext.h  HttpRequest.h  HttpResponse.h  HttpServer.h
HttpServer/include/middleware/: Middleware.h  MiddlewareChain.h
HttpServer/include/middleware/cors/: CorsConfig.h  CorsMiddleware.h
HttpServer/include/router/: Router.h  RouterHandler.h
HttpServer/include/session/: Session.h  SessionManager.h  SessionStorage.h
HttpServer/include/ssl/: SslConfig.h  SslConnection.h  SslContext.h  SslTypes.h
HttpServer/include/utils/: FileUtil.h  MysqlUtil.h  ThreadPool.h
HttpServer/include/utils/db/: DbConnection.h  DbConnectionPool.h  DbException.h
HttpServer/src/http/: HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp
HttpServer/src/middleware/: MiddlewareChain.cpp
HttpServer/src/middleware/cors/: CorsMiddleware.cpp
HttpServer/src/router/: Router.cpp
HttpServer/src/session/: Session.cpp  SessionManager.cpp  SessionStorage.cpp
HttpServer/src/ssl/: SslConfig.cpp  SslConnection.cpp  SslContext.cpp
HttpServer/src/utils/db/: DbConnection.cpp  DbConnectionPool.cpp
Internview/: README.md
Internview/00-项目详解/: 01-架构全景图.md  01-项目详细拆解.md  01-项目面试完全准备手册.md  02-RainCppAI项目面经突击.md  02-v1.4.0-Phase1并发Bug修复.md  02-面试介绍版.md  02-高频面试题.md  03-版本优化汇总.md  04-优化记录与STAR.md  04-面试深挖问答.md  05-v1.5.0-Phase2表结构重设计.md  06-v1.6.0-SSE流式与MCP标准化.md
Internview/01-AI-Agent基础/: 01-MCP协议与RAG关系及项目实现.md  02-RAG检索增强生成全链路详解.md  03-Agent架构与工具调用.md
Internview/02-网络基础/: 01-HTTP协议解析与路由系统.md  02-异步线程池与非阻塞响应.md
Internview/03-Cpp基础/: 01-智能指针与RAII.md  02-设计模式与系统设计.md  03-读写锁与LRU内存管理.md
Internview/04-操作系统基础/: README.md
Internview/05-学习规划/: 01-AI技术栈转型辅导方案.md
Storage/: TECHDOC.md
Storage/include/storage/: DbConnection.h  DbConnectionPool.h  DbException.h  MysqlUtil.h
Storage/src/: DbConnection.cpp  DbConnectionPool.cpp
mcp_servers/: weather_server.py
web/: AI.html  NotFound.html  TECHDOC.md  config.json  entry.html  menu.html  upload.html
web/css/: 404.css  entry.css  menu.css  style.css  upload.css
web/js/: api.js  entry.js  menu.js  ui.js  upload.js
